@@ -1,3 +1,7 @@
+1 December 2006: Wouter
+	- Moved xfrd ipc and reload handlers to front of event handler
+	  lists for a 10% speedup in xfrd.
+
 30 November 2006: Wouter
 	- Test for fallback in getaddrinfo more portable.
 	  Ported to FreeBSD 6.1 without inet6.
